[package]
name = "seq_trie"
version = "0.1.0"
authors = ["github.com/chuling <meetchuling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = false

[profile.release]
debug = false

[profile.test]
debug = false

[profile.bench]
debug = false

[dependencies]
